Added comments and documents relation to custom module
